# Threaded-Matrix-Mulitplication

./: README.md
 Mmultiplication/:  Mmultiplication.cbp  main.c  matrices_data.h  naive_mmultiplication.c  naive_mmultiplication.h
Mmultiplication/: CMakeLists.txt  Makefile  a.txt  b.txt  c.txt  file_processing.c  file_processing.h  main.c  matrices_data.h  matrix_util.c  matrix_util.h  multiply.c  multiply.h  naive_mmultiplication.h
Optimized Mmultiplication/: MMultiplication.cpp
